cluster/apps/drive/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: drive-oauth-auth-redirect
  namespace: drive
spec:
  forwardAuth:
    address: http://drive-oauth2-proxy.drive.svc.k8s.internal/
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - X-Auth-Request-User
      - X-Auth-Request-Preferred-Username
      - X-Auth-Request-Groups
      - Authorization
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: drive-auth-headers
  namespace: drive
spec:
  headers:
    sslRedirect: true
    stsSeconds: 315360000
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    sslHost: drive.yadunut.dev
    stsIncludeSubdomains: true
    stsPreload: true
    frameDeny: true
