cluster/apps/drive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: copyparty
  namespace: drive
  labels:
    app: copyparty
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: copyparty
  template:
    metadata:
      labels:
        app: copyparty
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - nut-gc2
      containers:
        - name: copyparty
          image: copyparty/ac:1.20.25 # {"$imagepolicy": "flux-system:copyparty"}
          args:
            - "-c"
            - "/config/copyparty.conf"
          ports:
            - containerPort: 3923
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: drive-config
              mountPath: /cfg/copyparty
      volumes:
        - name: config
          configMap:
            name: copyparty-config
            items:
              - key: copyparty.conf
                path: copyparty.conf
        - name: data
          persistentVolumeClaim:
            claimName: drive-data
        - name: drive-config
          persistentVolumeClaim:
            claimName: drive-config
